--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="yandex-verification" content="841598a5d1326a35" />
     <title>Мой Сайт Казино</title>
 </head>
 <body>
     <h1>Мой Сайт Казино</h1>
 </body>
+
 </html>
